--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.3.1",
     "axios": "^0.18.0",
+    "date-fns": "^1.30.1",
     "react": "16.8.3",
     "react-native": "0.59.4",
     "react-native-file-viewer": "^1.0.14",
